src/css/statePage.less
@import "base";
@import "nav";
@import "footer";

:root {
  font-size: 16px;
}

main {
  max-width: 900px;
  margin: auto;
  padding: 24px 16px;

  .side-ad {
    display: none;
  }

  @media (min-width: 1200px) {
    max-width: 1200px;
    display: flex;

    .main {
      flex: 1 1 900px;
    }

    .side-ad {
      display: block;
      flex: 0 0 300px;
      margin-left: 20px;
      order: 2;
    }
  }
}

[disabled] a {
  &, &:hover, &:focus {
    color: var(--secondary) !important;
    text-decoration: none;
    cursor: default;
  }
}

.show-counties[disabled], h2[disabled] {
  display: none;
}

header {
  padding-bottom: 16px;

  .state-icon {
    float: left;
    margin-right: 14px;
    max-width: 75px;
    height: 60px;
    opacity: .4;
  }

  h2 {
    .knockout-header();
    margin: 0;
    color: var(--secondary);
    font-size: .85rem;

    a, a:link, a:visited {
      color: var(--secondary);
      text-decoration: none;
    }
    a:hover, a:active {
      color: var(--link);
    }
  }

  h1 {
    margin: 0;
    font-size: 2rem;
    color: #333;
    font-weight: bold;

    @media @mobile {
      font-size: 1.8rem;
    }
  }
}

.mobile-calendar-wrapper{
  display: none;

  @media @mobile {
    display: block;
  }
}

.select-label {
  .knockout();
  font-size: 0.8rem;
  margin-bottom: 8px;
  margin-right: 6px;
  display: inline-block;
  text-transform: uppercase;
}

.outer-mobile-calendar {
  padding: 6px 4px;
  border: 1px solid #ccc;
  border-radius: 4px;
  display: inline-block;
}

.mobile-calendar {
  border: none;
  font-size: 12px;
  font-family: @gotham;
  background: transparent;
  width: 100%;
}

nav.race-calendar {
  @border-color: #EEE;
  .gotham();

  @media @mobile {
    display: none;
  }

  a {
    text-decoration: none;
  }

  ul {
    padding: 0 0 8px;
    margin: 0;
    display: flex;
    align-items: stretch;
    justify-content: flex-start;
    border-bottom: 2px solid @border-color;
  }

  li {
    display: block;
    padding: 10px 20px;
    border-right: 2px solid @border-color;
    border-top: 2px solid transparent;
    line-height: 1.5em;

    &:last-child {
      border-right: none;
    }
  }

  .office {
    display: block;
    font-weight: bold;
    /*color: var(--foreground);*/
  }

  .parties {
    display: block;
  }

  .date {
    display: block;
    color: #AAA;
    font-size: 12px;
  }

  .active {
    border-top: 2px solid #CCC;
  }
}

.chatter {
  font-family: @serif;
  font-size: 16px;
  line-height: 1.5em;
}

h3.latest-results {
  body.filtered & {
    display: none;
  }
}

hr {
  border: 1px solid #EEE;
}

.module {
  padding-bottom: 20px;

  pre {
    padding: 30px;
    background: #EEE;
  }

  h2 {
    border-bottom: 2px solid #EEE;
    padding-bottom: 8px;
    font-family: @gotham;
  }

  &.hidden {
    display: none;
  }

  &:focus {
    outline: none;
  }

  .no-results {
    .gotham();
  }
}

.show-counties {
  margin: 10px 0 20px;
  font-size: 1em;
  font-weight: bold;

  body.counties & {
    display: none;
  }
}

